# rust-ecm

./: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241209_064312_products.rs  m20241211_022634_add_status_to_products.rs
src/: config.rs  error.rs  main.rs
src/controllers/: cart.rs  mod.rs  order.rs  product.rs  user.rs
src/entity/: cart.rs  mod.rs  order_items.rs  orders.rs  prelude.rs  products.rs  user.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/routes/: auth.rs  cart.rs  mod.rs  order.rs  products.rs
src/services/: auth.rs  cart_service.rs  mod.rs  order_service.rs  product_service.rs
