[package]
name = "sea-ecm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = "1.1.2"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15"
bcrypt = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
uuid = { version = "1.0", features = ["v4"] }
rust_decimal = "1.36.0"
serde_with = "3.0"
futures-util = "0.3.31"
actix-web-httpauth = "0.8.2"
derive_more = { version="1.0.0", features = ["full"] }
validator = { version = "0.19", features = ["derive"] }
once_cell = "1.20.2"
regex = "1.11.1"
